--- a/index.html
+++ b/index.html
@@ -13,20 +13,53 @@
         <img src="img/pexels-bill-emrich-230794-0.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-1.jpg" alt="">
         <img src="img/pexels-bill-emrich-230794-2.jpg" alt="">
-        <hr>
     </div>
+    <hr>
         
         <!-- Le mie spese -->
     <div>
         <h2>Le mie spese</h2>
         <table>
-            <tr><td>Numero</td><td>Descrizione</td><td>Costo</td></tr>
+            <tr><td><Strong>Numero</Strong></td><td><Strong>Descrizione</Strong></td><td><Strong>Costo</Strong></td></tr>
             <tr><td>1</td><td>Biglietto aereo</td><td>120&euro;</td></tr>
             <tr><td>1</td><td>Biglietto aereo</td><td>120&euro;</td></tr>
             <tr><td>1</td><td>Biglietto aereo</td><td>120&euro;</td></tr>
-            <tr><td>Totale</td><td></td><td>360&euro;</td></tr>    
-            
+            <tr><td>Totale</td><td></td><td>360&euro;</td></tr>      
         </table>
+        <hr>
+    </div>
+
+        <!-- Cose da fare -->
+    <div>
+        <h3>Cose da fare</h3>
+        <ul>
+            <li>Visitare la Tower of London &</li>
+            <li>Visitare greenwich</li>
+            <li>Ascolatare un artista di strada a Cavent Garden</li>
+            <li>Mangiare il tipico Fish and Chips inglese</li>
+        </ul>
+        <hr>
+    </div>
+
+        <!-- Informazioni -->
+    <div>
+        <h3>Info Utili:</h3>
+        <ol>
+            <li>Numeri utili di emergenza
+                <ul><li><strong>999</strong> - Emergenza</li></ul>
+                <ul><li><strong>101</strong> - Numero polizia</li></ul>
+                <ul><li><strong>111</strong> - Numero assistenza medica</li></ul>    
+            </li>
+            <li>Hotel
+                <ul><li><strong>Nome Hotel</strong> - Buchingham Palace</li></ul>
+                <ul><li><strong>Indirizzo Hotel</strong> - Westminster, London SW1A 1AA, Regno Unito</li></ul>
+            </li>
+            <li>Aereo
+                <ul><li><strong>Voldo di Andata</strong> - Y1234X, ore 9:30 da Milano Malpensa</li></ul>
+                <ul><li><strong>Volo di Ritorno</strong> - Y1236X, ore 18:30 da London Heathrow</li></ul>
+            </li>
+        </ol>
+        <hr>
     </div>
 
 </body>
