add-aggiormento-foto

--- a/index.html
+++ b/index.html
@@ -20,11 +20,29 @@
     <div>
         <h2>Le mie spese</h2>
         <table>
-            <tr><td><Strong>Numero</Strong></td><td><Strong>Descrizione</Strong></td><td><Strong>Costo</Strong></td></tr>
-            <tr><td>1</td><td>Biglietto aereo</td><td>120&euro;</td></tr>
-            <tr><td>1</td><td>Biglietto aereo</td><td>120&euro;</td></tr>
-            <tr><td>1</td><td>Biglietto aereo</td><td>120&euro;</td></tr>
-            <tr><td>Totale</td><td></td><td>360&euro;</td></tr>      
+            <tr><td><Strong>Numero</Strong></td>
+                <td><Strong>Descrizione</Strong></td>
+                <td><Strong>Costo</Strong></td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td>Biglietto aereo</td>
+                <td>120&euro;</td>
+            </tr>
+            <tr><td>Totale</td>
+                <td>&nbsp;</td>
+                <td>360&euro;</td>
+            </tr>      
         </table>
         <hr>
     </div>
@@ -60,6 +78,13 @@
             </li>
         </ol>
         <hr>
+    </div>
+
+        <!-- Foto -->
+    <div>
+        <h3>Le foto</h3>
+        <a href=" https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">Londra 1</a>
+        <a href="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n">Londra 2 </a>
     </div>
 
 </body>
