--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         <!-- Foto -->
     <div>
         <h3>Le foto</h3>
-        <a href=" https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg">Londra 1</a>
-        <a href="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n">Londra 2 </a>
+      <img src="https://www.abta.com/sites/default/files/styles/large/public/media/uploads/london-400x400-compressor_0.jpg" alt="Londra 1 ">
+        <img src="https://imgc.allpostersimages.com/img/posters/evening-tower-bridge-and-river-thames-london_u-L-P2QVZJ0.jpg?artPerspective=n" alt="Londra 2">
     </div>
 
 </body>
