--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div>
         <h3>Cose da fare</h3>
         <ul>
-            <li>Visitare la Tower of London &</li>
-            <li>Visitare greenwich</li>
-            <li>Ascolatare un artista di strada a Cavent Garden</li>
-            <li>Mangiare il tipico Fish and Chips inglese</li>
+            <li>Visitare la Tower of London &#x2717</li>
+            <li>Visitare greenwich &#10003;</li>
+            <li>Ascolatare un artista di strada a Cavent Garden &#10003;</li>
+            <li>Mangiare il tipico Fish and Chips inglese &#x2717</li>
         </ul>
         <hr>
     </div>
